tests/baselines/reference/recursiveBaseCheck3.errors.txt
==== tests/cases/compiler/recursiveBaseCheck3.ts (2 errors) ====
    class A<T> extends C<T> { }
          ~
!!! error TS2310: Type 'A<T>' recursively references itself as a base type.
    class C<T> extends A<T> { }
    
    (new C).blah;
            ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'C<{}>'.